--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -10,7 +10,7 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="src/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Emperador</title>
 </head>
 
@@ -19,18 +19,19 @@
         <div id="formContent">
             
             <div class="fadeIn first">
-                <img src="src/images/user.svg" id="icon" alt="User Icon" />
+                <img src="../images/user.svg" id="icon" alt="User Icon" />
             </div>
 
             <form>
-                <input type="text" id="login" class="fadeIn second" name="login" placeholder="usuario">
-                <input type="password" id="password" class="fadeIn third" name="login" placeholder="contraseña">
+                <input type="text" id="email" class="fadeIn second" name="email" placeholder="correo">
+                <input type="password" id="password" class="fadeIn third" name="password" placeholder="contraseña">
+                <input type="password" id="repitPassword" class="fadeIn third" name="repitPassword" placeholder="Repetir contraseña">
                 <input type="submit" class="fadeIn fourth" value="Iniciar sesiòn">
             </form>
 
             <!-- Remind Passowrd -->
             <div id="formFooter">
-                <a class="underlineHover" href="src/pages/register.html">Registrarse</a>
+                <a class="underlineHover" href="../../index.html">Iniciar sesión</a>
             </div>
 
         </div>
