--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-analytics.js"></script>
+
     <link rel="stylesheet" href="src/css/index.css">
     <title>Emperador</title>
 </head>
@@ -17,13 +27,13 @@
 <body>
     <div class="wrapper fadeInDown">
         <div id="formContent">
-            
+
             <div class="fadeIn first">
                 <img src="src/images/user.svg" id="icon" alt="User Icon" />
             </div>
 
-            <form>
-                <input type="text" id="login" class="fadeIn second" name="login" placeholder="usuario">
+            <form onsubmit="auth(event)">
+                <input type="text" id="email" class="fadeIn second" name="email" placeholder="usuario">
                 <input type="password" id="password" class="fadeIn third" name="login" placeholder="contraseña">
                 <input type="submit" class="fadeIn fourth" value="Iniciar sesiòn">
             </form>
@@ -35,6 +45,7 @@
 
         </div>
     </div>
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
