--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -9,7 +9,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
-
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <link rel="stylesheet" href="../css/index.css">
     <title>Emperador</title>
 </head>
@@ -17,15 +20,17 @@
 <body>
     <div class="wrapper fadeInDown">
         <div id="formContent">
-            
+
             <div class="fadeIn first">
                 <img src="../images/user.svg" id="icon" alt="User Icon" />
             </div>
 
-            <form>
+            <form onsubmit="register(event)" id="form">
+
                 <input type="text" id="email" class="fadeIn second" name="email" placeholder="correo">
                 <input type="password" id="password" class="fadeIn third" name="password" placeholder="contraseña">
-                <input type="password" id="repitPassword" class="fadeIn third" name="repitPassword" placeholder="Repetir contraseña">
+                <input type="password" id="repitPassword" class="fadeIn third" name="repitPassword"
+                    placeholder="Repetir contraseña">
                 <input type="submit" class="fadeIn fourth" value="Iniciar sesiòn">
             </form>
 
@@ -36,6 +41,9 @@
 
         </div>
     </div>
+    <script src="../js/register.js"></script>
 </body>
+
+if (password.value == repitPassword) {
 
 </html>
