funcionalidad de login y registro

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="src/images/user.svg" id="icon" alt="User Icon" />
             </div>
 
-            <form onsubmit="auth(event)">
+            <form onsubmit="auth(event)" id="form">
                 <input type="text" id="email" class="fadeIn second" name="email" placeholder="usuario">
                 <input type="password" id="password" class="fadeIn third" name="login" placeholder="contraseña">
                 <input type="submit" class="fadeIn fourth" value="Iniciar sesiòn">
