terminado registro de prodcuto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="formContent">
 
             <div class="fadeIn first">
-                <img src="src/images/user.svg" id="icon" alt="User Icon" />
+                <img src="./src/images/user.svg" id="icon" alt="User Icon" />
             </div>
 
             <form onsubmit="auth(event)" id="form">
