--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -38,8 +38,8 @@
           <h1 class="my-4">Shop Name</h1>
           <div class="list-group">
             <button type="button" class="btn btn-primary">Agregar mueble</button>
-            <a href="#" class="list-group-item">Category 2</a>
-            <a href="#" class="list-group-item">Category 3</a>
+            <!-- <a href="#" class="list-group-item">Category 2</a>
+            <a href="#" class="list-group-item">Category 3</a> -->
           </div>
   
         </div>
