ajustes para vista de imagenes en carrusel

--- a/src/pages/newProduct.html
+++ b/src/pages/newProduct.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="row">
                     <div class="col-auto mr-auto">
-                        <button type="button" class="btn btn-secondary">Cancelar</button>
+                        <button type="button" onclick="cancel()" class="btn btn-secondary">Cancelar</button>
                     </div>
                     <div class="col-auto">
                         <button type="submit" class="btn btn-primary">Guardar</button>
